Testing using external text file

--- a/Calculations2.Tests/Calculations2.Tests.csproj
+++ b/Calculations2.Tests/Calculations2.Tests.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\Calculations\Calculations.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="IsOddOrEvenTestData.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
